fix blue highlight on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* #container {
